Fixed button whitespace issue - rewrote creation of logic buttons in js rather than in html so that whitespace is not added - added margin that is desired and consistent accross buttons - made top level buttons (which are in html) simply next to each other to avoid the whitespace Removed paragraphs and replaced with divs and brs to get more condensed but nice layout

--- a/static/screens_style.css
+++ b/static/screens_style.css
@@ -5,7 +5,9 @@ body {
 
 button {
   cursor: pointer;
+  margin: 3px;
 }
+
 #screen-table, 
 #screen-table > thead > tr > th, 
 #screen-table > tbody > tr > td {
@@ -105,15 +107,19 @@ button {
   border: 0;
   margin: auto;
 }
+.input-table > tr > td > label {
+  margin: 3px;
+}
 .input-wide {
   box-sizing: border-box;
   width: 100%;
 }
 .input-conc {
   box-sizing: border-box;
-  width: 60%;
+  width: 69%;
+  margin-right: 1%;
 }
 .input-units {
   box-sizing: border-box;
-  width: 40%;
+  width: 30%;
 }
